<!-- 기본 언어 (영어) 리소스 목록 -->
<resources>
    <string name="app_name">SKKU Helper</string>

    <!-- StartActivity - HomeFragment -->
    <string name="start_home_skku">SKKU</string>
    <string name="start_home_login">Log In</string>
    <!-- StartActivity - LogInFragment -->
    <string name="start_login_skku">SKKU</string>
    <string name="start_login_token">Token</string>
    <string name="start_login_token_help">What is Token?</string>
    <string name="start_login_login">Log In</string>
    <string name="start_login_token_help_title">What is Token?</string>
    <string name="start_login_token_help_message">A Token is provided by i-Campus. You can obtain it here (Approved Integration -> New Access Token -> Generate Token).</string>
    <string name="start_login_token_help_dismiss">Dismiss</string>
    <string name="start_login_token_help_issue">Issue Token</string>
    <string name="start_login_login_loading_title">Log In</string>
    <string name="start_login_login_failed_title">Log In Failed</string>
    <string name="start_login_login_failed_message">Login failed. Please check your internet connection or verify that the token value was entered correctly.</string>
    <string name="start_login_login_failed_dismiss">Dismiss</string>

    <!-- MainActivity -->
    <string name="main_menu_refresh">Loading Assignments...</string>
    <string name="main_loading">Loading Data...</string>
    <string name="main_message_auto_login">Automatic LogIn Success!</string>
    <string name="main_dialog_delete_title">Delete</string>
    <string name="main_dialog_delete_message">Are you sure to delete this assignment?\nIf you delete this assignment, it will no longer be visible on the main screen.</string>
    <string name="main_dialog_delete_cancel">Cancel</string>
    <string name="main_dialog_delete_confirm">Delete</string>
    <!-- MainActivity - Calendar -->
    <string name="main_calendar_sun">SUN</string>
    <string name="main_calendar_mon">MON</string>
    <string name="main_calendar_tue">TUE</string>
    <string name="main_calendar_wed">WED</string>
    <string name="main_calendar_thu">THU</string>
    <string name="main_calendar_fri">FRI</string>
    <string name="main_calendar_sat">SAT</string>
    <string name="main_calendar_undefined">Undefined</string>
    <string name="main_calendar_empty_item_message">There are no assignments for this date.</string>
    <!-- MainActivity - Home -->
    <string name="main_home_left_assignments">Left Assignments</string>
    <string name="main_home_left_empty_item_message">There are no left assignments.</string>
    <string name="main_home_completed_assignments">Completed Assignments</string>
    <string name="main_home_completed_empty_item_message">There are no completed assignments.</string>
    <string name="main_home_expired_assignments">Expired Assignments</string>
    <string name="main_home_expired_empty_item_message">There are no expired assignments.</string>
    <!-- MainActivity - Account -->
    <string name="main_account_profile_name_default">User Name</string>
    <string name="main_account_profile_email_default">example@skku.edu</string>
    <string name="main_account_profile_email_none">No Email</string>
    <string name="main_account_achievement_title">Achievement</string>
    <string name="main_account_achievement_rate_default">0%</string>
    <string name="main_account_achievement_count_title">Completed Tasks</string>
    <string name="main_account_achievement_count_default">0 / 0</string>
    <string name="main_account_achievement_message_100">Perfect!</string>
    <string name="main_account_achievement_message_80">Almost done!</string>
    <string name="main_account_achievement_message_50">More than halfway!</string>
    <string name="main_account_achievement_message_0">Cheer up!</string>
    <string name="main_account_invalidate">Invalidate Remote Data</string>
    <string name="main_account_dialog_invalidate_title">Invalidate Remote Data</string>
    <string name="main_account_dialog_invalidate_message">Are you sure to invalidate remote data? This operation is irreversible.</string>
    <string name="main_account_dialog_invalidate_cancel">Cancel</string>
    <string name="main_account_dialog_invalidate_confirm">Invalidate</string>
    <string name="main_account_logout">Log Out</string>
    <string name="main_account_dialog_logout_title">Log Out</string>
    <string name="main_account_dialog_logout_message">Are you sure to log out?</string>
    <string name="main_account_dialog_logout_cancel">Cancel</string>
    <string name="main_account_dialog_logout_confirm">Log Out</string>
    <!-- MainActivity - BottomNavigation -->
    <string name="main_bottomNavigation_calendar">Calendar</string>
    <string name="main_bottomNavigation_home">Home</string>
    <string name="main_bottomNavigation_account">Account</string>

    <!-- AssignmentActivity -->
    <string name="assignment_menu_edit">Edit</string>
    <string name="assignment_dialog_edit_title">Edit</string>
    <string name="assignment_dialog_edit_assignment_name">Assignment Name</string>
    <string name="assignment_dialog_edit_due_date">Due Date</string>
    <string name="assignment_dialog_edit_cancel">Cancel</string>
    <string name="assignment_dialog_edit_confirm">Confirm</string>
    <string name="assignment_menu_delete">Delete</string>
    <string name="assignment_dialog_delete_title">Delete</string>
    <string name="assignment_dialog_delete_message">Are you sure to delete this assignment?\nIf you delete this assignment, it will no longer be visible on the main screen.</string>
    <string name="assignment_dialog_delete_cancel">Cancel</string>
    <string name="assignment_dialog_delete_confirm">Delete</string>
    <!-- AssignmentActivity - Information -->
    <string name="assignment_information">Information</string>
    <string name="assignment_information_description">Description</string>
    <string name="assignment_information_description_fail">Description does not exist</string>
    <string name="assignment_information_memo">Memo</string>
    <string name="assignment_information_memo_hint">Write a memo about this assignment</string>
    <!-- AssignmentActivity - Detail -->
    <string name="assignment_detail">Detail</string>
    <string name="assignment_detail_open_assignment">Open Assignment</string>
    <string name="assignment_detail_open_submission">Open Submission</string>
    <string name="assignment_detail_information">Information</string>
    <string name="assignment_detail_name">Assignment</string>
    <string name="assignment_detail_name_default">Assignment Name</string>
    <string name="assignment_detail_course">Course</string>
    <string name="assignment_detail_course_default">Course Name</string>
    <string name="assignment_detail_assignmentType">Type</string>
    <string name="assignment_detail_assignmentType_default">Type</string>
    <string name="assignment_detail_maxPoints">Max Points</string>
    <string name="assignment_detail_maxPoints_default">10.0</string>
    <string name="assignment_detail_submitted">Submitted</string>
    <string name="assignment_detail_submitted_default">Yes</string>
    <string name="assignment_detail_locked">Locked</string>
    <string name="assignment_detail_locked_default">No</string>
    <string name="assignment_detail_createdDate">Created Date</string>
    <string name="assignment_detail_createdDate_default">2025/12/25 10:10:10</string>
    <string name="assignment_detail_updatedDate">Updated Date</string>
    <string name="assignment_detail_updatedDate_default">2025/12/25 10:10:10</string>
    <string name="assignment_detail_dueDate">Due Date</string>
    <string name="assignment_detail_dueDate_default">2025/12/25 10:10:10</string>
    <string name="assignment_detail_lockedDate">Locked Date</string>
    <string name="assignment_detail_lockedDate_default">2025/12/25 10:10:10</string>
    <string name="assignment_detail_unlockedDate">Unlocked Date</string>
    <string name="assignment_detail_unlockedDate_default">2025/12/25 10:10:10</string>
    <string name="assignment_detail_submission">Submission</string>
    <string name="assignment_detail_submission_grade">Grade</string>
    <string name="assignment_detail_submission_grade_default">0.0 / 0.0</string>
    <string name="assignment_detail_submission_submissionType">Type</string>
    <string name="assignment_detail_submission_submissionType_default">Assignment</string>
    <string name="assignment_detail_submission_submission_date">Submission Date</string>
    <string name="assignment_detail_submission_submission_date_default">2025/12/25 10:10:10</string>
    <string name="assignment_detail_submission_submission_date_late">Late Submission</string>
    <string name="assignment_detail_submission_grading_date">Grading Date</string>
    <string name="assignment_detail_submission_grading_date_default">2025/12/25 10:10:10</string>
    <string name="assignment_detail_submission_attachments">Attachments</string>
    <string name="assignment_detail_submission_attachments_default">ABC.pdf</string>

    <!-- ETC -->
    <string name="dialog_loading_message">Loading</string>
</resources>