<?xml version="1.0" encoding="utf-8"?>
<!-- AccountFragment Layout -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:showDividers="middle"
    android:divider="@drawable/empty_divider_8dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurfaceContainerLow"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageView_profile"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_account"
                app:tint="?attr/colorPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:text="@string/main_account_profile_name_default" />

                <TextView
                    android:id="@+id/textView_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    android:maxLines="1"
                    android:text="@string/main_account_profile_email_default" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        android:text="@string/main_account_achievement_title" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progress_achievement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:trackThickness="12dp"
                app:indicatorSize="128dp"
                app:trackColor="?attr/colorSurfaceVariant"
                app:indicatorColor="?attr/colorPrimary"
                app:trackCornerRadius="8dp"
                android:progress="0"/>

            <TextView
                android:id="@+id/textView_achievement_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/progress_achievement"
                app:layout_constraintBottom_toBottomOf="@id/progress_achievement"
                app:layout_constraintStart_toStartOf="@id/progress_achievement"
                app:layout_constraintEnd_toEndOf="@id/progress_achievement"
                android:textAppearance="?attr/textAppearanceHeadlineMedium"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimary"
                android:text="@string/main_account_achievement_rate_default" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/progress_achievement"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceLabelMedium"
                    android:textColor="?attr/colorOutline"
                    android:text="@string/main_account_achievement_count_title" />

                <TextView
                    android:id="@+id/textView_achievement_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceHeadlineSmall"
                    android:textStyle="bold"
                    android:text="@string/main_account_achievement_count_default"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <TextView
                    android:id="@+id/textView_achievement_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:text="@string/main_account_achievement_message_0" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/button_invalidate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.OutlinedButton"
        app:strokeColor="?attr/colorOnSurface"
        android:textColor="?attr/colorOnSurface"
        android:text="@string/main_account_invalidate"/>

    <Button
        android:id="@+id/button_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.OutlinedButton"
        app:strokeColor="?attr/colorOnSurface"
        android:textColor="?attr/colorOnSurface"
        android:text="@string/main_account_logout"/>

</LinearLayout>