<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:showDividers="middle"
    android:divider="@drawable/empty_divider_8dp"
    tools:context=".ui.assignment.DetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:divider="@drawable/empty_divider_8dp">
        <Button
            android:id="@+id/button_assignment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/assignment_detail_open_assignment"/>
        <Button
            android:id="@+id/button_submission"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/assignment_detail_open_submission"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:minHeight="200dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:text="@string/assignment_detail_description" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorSurfaceContainerLow"
                android:fillViewport="true">
                <TextView
                    android:id="@+id/textView_html"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"/>
            </ScrollView>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_submission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:text="@string/assignment_detail_submission" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorSurfaceContainerLow"
                android:fillViewport="true">
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:showDividers="middle"
                    android:divider="@drawable/empty_divider_4dp">
                    <TableRow
                        android:id="@+id/tableRow_grade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAppearance="?attr/textAppearanceTitleSmall"
                            android:text="@string/assignment_detail_submission_grade"/>
                        <TextView
                            android:id="@+id/tableText_grade"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:textAppearance="?attr/textAppearanceBodySmall"
                            android:text="@string/assignment_detail_submission_grade_default"/>
                    </TableRow>
                    <TableRow
                        android:id="@+id/tableRow_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAppearance="?attr/textAppearanceTitleSmall"
                            android:text="@string/assignment_detail_submission_type"/>
                        <TextView
                            android:id="@+id/tableText_type"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:textAppearance="?attr/textAppearanceBodySmall"
                            android:text="@string/assignment_detail_submission_type_default"/>
                    </TableRow>
                    <TableRow
                        android:id="@+id/tableRow_submission_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAppearance="?attr/textAppearanceTitleSmall"
                            android:text="@string/assignment_detail_submission_submission_date"/>
                        <TextView
                            android:id="@+id/tableText_submission_date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:textAppearance="?attr/textAppearanceBodySmall"
                            android:text="@string/assignment_detail_submission_submission_date_default"/>
                    </TableRow>
                    <TableRow
                        android:id="@+id/tableRow_grading_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAppearance="?attr/textAppearanceTitleSmall"
                            android:text="@string/assignment_detail_submission_grading_date"/>
                        <TextView
                            android:id="@+id/tableText_grading_date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:textAppearance="?attr/textAppearanceBodySmall"
                            android:text="@string/assignment_detail_submission_grading_date_default"/>
                    </TableRow>
                    <TableRow
                        android:id="@+id/tableRow_attachments"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAppearance="?attr/textAppearanceTitleSmall"
                            android:text="@string/assignment_detail_submission_attachments"/>
                        <TextView
                            android:id="@+id/tableText_attachments"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:textAppearance="?attr/textAppearanceBodySmall"
                            android:text="@string/assignment_detail_submission_attachments_default"/>
                    </TableRow>
                </TableLayout>
            </ScrollView>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</LinearLayout>