<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_start"
    tools:context=".ui.StartFragment">
    
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="4" />

    <FrameLayout
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_gravity="center"
        android:background="@drawable/background_circle_white">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_skku"
            android:contentDescription="@string/start_home_skku" />

    </FrameLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginHorizontal="32dp"
        android:backgroundTint="?attr/colorPrimaryContainer"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="24sp"
        android:autoSizeMaxTextSize="96sp"
        android:autoSizeStepGranularity="2sp"
        android:maxLines="1"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/app_name" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:backgroundTint="?attr/colorPrimaryContainer"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:text="@string/start_home_login" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2" />

</LinearLayout>