<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_start"
    tools:context=".ui.LogInFragment">

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="4" />

    <FrameLayout
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_gravity="center"
        android:background="@drawable/background_circle_white">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_skku"
            android:contentDescription="@string/start_login_skku" />

    </FrameLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:backgroundTint="?attr/colorPrimaryContainer"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textSize="36sp"
        android:maxLines="1"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/app_name" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/background_login_textinput">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="4dp"
            style="@style/Widget.SKKUHelper.LogIn.TextInputLayout"
            app:endIconMode="clear_text"
            android:hint="@string/start_login_token">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textSize="16sp"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

    </FrameLayout>

    <Button
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:alpha="0.5"
        android:textColor="?attr/colorOnPrimary"
        android:text="@string/start_login_token_help"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:backgroundTint="?attr/colorPrimaryContainer"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:text="@string/start_login_confirm" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2" />

</LinearLayout>